--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^7.5.3",
     "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "nodemon": "^3.0.1",
+    "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
